--- a/public/index.html
+++ b/public/index.html
@@ -205,7 +205,7 @@
                     <div class="row d-flex justify-content-between align-items-center">
                         <!-- main heading start -->
                         <div class="col-auto">
-                            <h1 class="mb-0">Overview</h1>
+                            <h1 class="fw-bold mb-0">Overview</h1>
                         </div>
                         <!-- main heading end -->
 
@@ -234,7 +234,7 @@
                                 <!-- profile avatar -->
                                 <div class="dropdown" data-bs-toggle="tooltip" data-bs-placement="left" title="Amanda, please click me! More tooltips on mobile nav! :)">
                                     <a href="javascript:void(0)" class="profile text-dark" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-                                        <p class="d-none d-sm-block">Jones Ferdinand</p>
+                                        <p class="fs-5 d-none d-sm-block">Jones Ferdinand</p>
                                         <img src="/assets/img/avatar.png" alt="User Avatar Icon" />
                                     </a>
 
@@ -259,7 +259,7 @@
                                 <div class="card mb-2 mb-lg-0">
                                     <div class="card-body">
                                         <h2 class="card-title">Unresolved</h2>
-                                        <span>60</span>
+                                        <span class="fs-1 fw-bold">60</span>
                                     </div>
                                 </div>
                             </a>
@@ -270,7 +270,7 @@
                                 <div class="card mb-2 mb-lg-0">
                                     <div class="card-body">
                                         <h2 class="card-title">Overdue</h2>
-                                        <span>16</span>
+                                        <span class="fs-1 fw-bold">16</span>
                                     </div>
                                 </div>
                             </a>
@@ -281,7 +281,7 @@
                                 <div class="card">
                                     <div class="card-body">
                                         <h2 class="card-title">Open</h2>
-                                        <span>43</span>
+                                        <span class="fs-1 fw-bold">43</span>
                                     </div>
                                 </div>
                             </a>
@@ -292,7 +292,7 @@
                                 <div class="card">
                                     <div class="card-body">
                                         <h2 class="card-title">On hold</h2>
-                                        <span>64</span>
+                                        <span class="fs-1 fw-bold">64</span>
                                     </div>
                                 </div>
                             </a>
@@ -485,27 +485,55 @@
 
                     <!-- tickets and tasks start -->
                     <div class="row">
-                        <div class="col-lg-6">
+                        <div class="col-xl-6 unresolved-tickets mb-3 mb-xl-0">
                             <div class="card">
-                                <div class="card-body">
-                                    <div class="row">
-                                        <div class="col-lg-6">
+                                <div class="card-body px-0">
+                                    <div class="row tickets">
+                                        <div class="col-7">
                                             <h2>Unresolved tickets</h2>
                                             <p><span class="gray-400">Group:</span> Support</p>
                                         </div>
 
-                                        <div class="col-lg-6 text-end fw-bold">
+                                        <div class="col-5 text-end fw-semibold">
                                             <a href="/">View details</a> 
                                         </div>
                                     </div>
+
+                                    <ul class="list-group">
+                                        <li class="list-group-item fs-5 fw-semibold">
+                                            Waiting on Feature Request
+                                            <span class="gray-400">4238</span>
+                                        </li>
+                                        <li class="list-group-item fs-5 fw-semibold">
+                                            Awaiting Customer Response
+                                            <span class="gray-400">1005</span>
+                                        </li>
+                                        <li class="list-group-item fs-5 fw-semibold">
+                                            Awaiting Developer Fix
+                                            <span class="gray-400">914</span>
+                                        </li>
+                                        <li class="list-group-item fs-5 fw-semibold pb-0">
+                                            Pending
+                                            <span class="gray-400">281</span>
+                                        </li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="col-lg-6">
+                        <div class="col-xl-6 all-tasks mb-3 mb-xl-0">
                             <div class="card">
-                                <div class="card-body">
-                                    
+                                <div class="card-body px-0">
+                                    <div class="row tasks">
+                                        <div class="col-7">
+                                            <h2>Tasks</h2>
+                                            <p><span class="gray-400">Today</span></p>
+                                        </div>
+
+                                        <div class="col-5 text-end fw-semibold">
+                                            <a href="/">View all</a> 
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
