--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
                             </defs>
                         </svg>
                         
-                        <h2 class="d-none d-lg-block mb-0">Dashboard Kit</h2>
+                        <h2 class="d-none d-lg-block mb-0 gray-300">Dashboard Kit</h2>
                     </div>
                 </a>
     
@@ -487,7 +487,7 @@
                     <div class="row">
                         <div class="col-xl-6 unresolved-tickets mb-3 mb-xl-0">
                             <div class="card">
-                                <div class="card-body px-0 pb-2">
+                                <div class="card-body px-0 pb-1">
                                     <div class="row tickets">
                                         <div class="col-7">
                                             <h2>Unresolved tickets</h2>
@@ -523,7 +523,7 @@
 
                         <div class="col-xl-6 all-tasks mb-3 mb-xl-0">
                             <div class="card">
-                                <div class="card-body px-0 pb-2">
+                                <div class="card-body px-0 pb-1">
                                     <div class="row tasks">
                                         <div class="col-7">
                                             <h2>Tasks</h2>
@@ -564,7 +564,7 @@
 
                                             <a class="btn btn-success fw-bold text-uppercase text-white" href="/" role="button">New</a>
                                         </li>
-                                        <li class="list-group-item fs-5 fw-semibold pb-0">
+                                        <li class="list-group-item fs-5 fw-semibold pt-0 pb-0">
                                             <div class="form-check">
                                                 <input class="form-check-input me-1" type="checkbox" value="" id="flexCheckChecked" checked>
                                                 <label class="form-check-label" for="flexCheckChecked">
