Changed tasks buttons with badges, style fixes

--- a/public/index.html
+++ b/public/index.html
@@ -607,8 +607,8 @@
                                                         Finish ticket update
                                                     </label>
                                                 </div>
-
-                                                <a class="btn btn-warning fw-bold text-uppercase text-white d-none d-sm-block" href="/" role="button">Urgent</a>
+                                                
+                                                <span class="badge text-bg-warning p-1 fw-bold text-uppercase text-white d-none d-sm-block">Urgent</span>
                                             </li>
 
                                             <li class="list-group-item fs-5 fw-semibold">
@@ -618,8 +618,7 @@
                                                         Create new ticket example
                                                     </label>
                                                 </div>
-
-                                                <a class="btn btn-success fw-bold text-uppercase text-white d-none d-sm-block" href="/" role="button">New</a>
+                                                <span class="badge text-bg-success p-1 fw-bold text-uppercase text-white d-none d-sm-block">New</span>
                                             </li>
 
                                             <li class="list-group-item fs-5 fw-semibold pt-0 pb-0">
@@ -629,8 +628,7 @@
                                                         Update ticket report
                                                     </label>
                                                 </div>
-
-                                                <a class="btn btn-info fw-bold text-uppercase gray-400 d-none d-sm-block" href="/" role="button">Default</a>
+                                                <span class="badge text-bg-info p-1 fw-bold text-uppercase gray-400 d-none d-sm-block">Default</span>
                                             </li>
                                         </ul>
                                     </div>
