--- a/public/index.html
+++ b/public/index.html
@@ -230,16 +230,16 @@
                                     <!-- profile icons start -->
 
                                     <!-- profile avatar -->
-                                    <div class="dropdown" data-bs-toggle="tooltip" data-bs-placement="left" title="Amanda, please click me! More tooltips on mobile nav! :)">
+                                    <div class="dropdown" data-bs-toggle="tooltip" data-bs-placement="left" title="Amanda, please click me! More tooltips on mobile nav too! :)">
                                         <a href="javascript:void(0)" class="profile text-dark" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
-                                            <p class="fs-5 d-none d-sm-block">Jones Ferdinand</p>
+                                            <p class="fs-5 fw-semibold d-none d-sm-block">Jones Ferdinand</p>
                                             <img src="/assets/img/avatar.png" alt="User Avatar Icon" />
                                         </a>
 
                                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                             <li><a class="dropdown-item" href="/">View my profile</a></li>
                                             <li><a class="dropdown-item" href="/">Help Center</a></li>
-                                            <li><a class="dropdown-item" href="/">Sign Out</a></li>
+                                            <li><a class="dropdown-item text-danger fw-bold" href="/">Sign Out</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -251,7 +251,7 @@
                     <!-- content start -->
                     <section class="content">
                         <!-- cards row start -->
-                        <div class="row mt-2 mb-3">
+                        <div class="row mt-5 mb-3 mb-sm-1">
                             <div class="col-lg-3 col-sm-6">
                                 <a href="/">
                                     <div class="card mb-2 mb-lg-0">
@@ -511,7 +511,7 @@
                                                 Awaiting Developer Fix
                                                 <span class="gray-400">914</span>
                                             </li>
-                                            <li class="list-group-item fs-5 fw-semibold pb-0">
+                                            <li class="list-group-item fs-5 fw-semibold">
                                                 Pending
                                                 <span class="gray-400">281</span>
                                             </li>
@@ -541,7 +541,7 @@
                                                 <input class="form-control py-0 create-task" type="text" placeholder="Create new task" aria-label="Create new task">
 
                                                 <button type="button" class="btn btn-info p-0" data-bs-toggle="modal" data-bs-target="#taskModal">
-                                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" data-bs-toggle="tooltip" data-bs-placement="top" title="Create a new task">
                                                         <rect width="24" height="24" rx="8" fill="#F0F1F7"/>
                                                         <path d="M12 7V17" stroke="#9FA2B4" stroke-width="2" stroke-linecap="round"/>
                                                         <path d="M17 12L7 12" stroke="#9FA2B4" stroke-width="2" stroke-linecap="round"/>
@@ -589,7 +589,7 @@
 
                                                                     <div class="modal-footer border-0 px-0">
                                                                         <button type="button" class="btn btn-info" data-bs-dismiss="modal">Discard</button>
-                                                                        <button type="submit" class="btn btn-primary">Add task</button>
+                                                                        <button type="submit" class="btn btn-primary fw-bold">Add task</button>
                                                                     </div>
                                                                 </form>
                                                             </div>
