--- a/public/index.html
+++ b/public/index.html
@@ -608,7 +608,7 @@
                                                     </label>
                                                 </div>
                                                 
-                                                <span class="badge text-bg-warning p-1 fw-bold text-uppercase text-white d-none d-sm-block">Urgent</span>
+                                                <span class="badge text-bg-warning fw-bold text-uppercase text-white d-none d-sm-block">Urgent</span>
                                             </li>
 
                                             <li class="list-group-item fs-5 fw-semibold">
@@ -618,7 +618,7 @@
                                                         Create new ticket example
                                                     </label>
                                                 </div>
-                                                <span class="badge text-bg-success p-1 fw-bold text-uppercase text-white d-none d-sm-block">New</span>
+                                                <span class="badge text-bg-success fw-bold text-uppercase text-white d-none d-sm-block">New</span>
                                             </li>
 
                                             <li class="list-group-item fs-5 fw-semibold pt-0 pb-0">
@@ -628,7 +628,7 @@
                                                         Update ticket report
                                                     </label>
                                                 </div>
-                                                <span class="badge text-bg-info p-1 fw-bold text-uppercase gray-400 d-none d-sm-block">Default</span>
+                                                <span class="badge text-bg-info fw-bold text-uppercase gray-400 d-none d-sm-block">Default</span>
                                             </li>
                                         </ul>
                                     </div>
