fixed spacing and col sizes

--- a/public/index.html
+++ b/public/index.html
@@ -311,6 +311,7 @@
                                 <div class="card chart-wrapper">
                                     <div class="card-body p-0">
                                         <div class="row">
+                                            <!-- chart left start -->
                                             <div class="col-xl-8 chart-left-border">
                                                 <div class="chart-left">
                                                     <h2>Today's trends</h2>
@@ -342,7 +343,7 @@
             
                                                     <div class="row chart-main">
                                                         <div class="col-12">
-                                                            <svg class="pe-3" viewBox="0 0 686 380" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                            <svg class="w-100 pe-0 pe-xl-3" viewBox="0 0 686 380" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                                 <g clip-path="url(#clip0_584_115)">
                                                                     <path d="M0 355H686" stroke="#EBEDF0"/>
                                                                     <path d="M0 299H686" stroke="#EBEDF0"/>
@@ -452,35 +453,38 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            <!-- chart left end -->
             
+                                            <!-- chart right start -->
                                             <div class="col-xl-4 ps-xl-0">
                                                 <div class="row gx-0 chart-right h-100">
-                                                    <div class="col-xl-12 col-sm-6 stat">
+                                                    <div class="col-xl-12 col-md-4 col-sm-6 stat">
                                                         <span class="lead">Resolved</span>
                                                         <span class="h1 mb-0">449</span>
                                                     </div>
 
-                                                    <div class="col-xl-12 col-sm-6 stat">
+                                                    <div class="col-xl-12 col-md-4 col-sm-6 stat">
                                                         <span class="lead">Received</span>
                                                         <span class="h1 mb-0">426</span>
                                                     </div>
 
-                                                    <div class="col-xl-12 col-sm-6 stat">
+                                                    <div class="col-xl-12 col-md-4 col-sm-6 stat">
                                                         <span class="lead">Average first response time</span>
                                                         <span class="h1 mb-0">33m</span>
                                                     </div>
 
-                                                    <div class="col-xl-12 col-sm-6 stat">
+                                                    <div class="col-xl-12 col-md-6 col-sm-6 stat">
                                                         <span class="lead">Average response time</span>
                                                         <span class="h1 mb-0">3h 8m</span>
                                                     </div>
 
-                                                    <div class="col-xl-12 stat">
+                                                    <div class="col-xl-12 col-md-6 stat">
                                                         <span class="lead">Resolution within SLA</span>
                                                         <span class="h1 mb-0">94%</span>
                                                     </div>
                                                 </div>
                                             </div>
+                                            <!-- chart right end -->
                                         </div>
                                     </div>
                                 </div>
