--- a/public/index.html
+++ b/public/index.html
@@ -511,19 +511,19 @@
 
                                         <ul class="list-group">
                                             <li class="list-group-item fs-5 fw-semibold">
-                                                Waiting on Feature Request
+                                                <p>Waiting on Feature Request</p>
                                                 <span class="gray-400">4238</span>
                                             </li>
                                             <li class="list-group-item fs-5 fw-semibold">
-                                                Awaiting Customer Response
+                                                <p>Awaiting Customer Response</p>
                                                 <span class="gray-400">1005</span>
                                             </li>
                                             <li class="list-group-item fs-5 fw-semibold">
-                                                Awaiting Developer Fix
+                                                <p>Awaiting Developer Fix</p>
                                                 <span class="gray-400">914</span>
                                             </li>
                                             <li class="list-group-item fs-5 fw-semibold">
-                                                Pending
+                                                <p>Pending</p>
                                                 <span class="gray-400">281</span>
                                             </li>
                                         </ul>
@@ -660,6 +660,9 @@
         <!-- JavaScript Bundle with Popper -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
         
+        <!-- jQuery -->
+        <script src="https://code.jquery.com/jquery-3.6.2.min.js" integrity="sha256-2krYZKh//PcchRtd+H+VyyQoZ/e3EcrkxhM8ycwASPA=" crossorigin="anonymous"></script>
+
         <!-- custom js -->
         <script src="/assets/js/scripts.js"></script>
     </body>
