--- a/public/index.html
+++ b/public/index.html
@@ -258,7 +258,7 @@
                     <!-- content start -->
                     <section class="content">
                         <!-- cards row start -->
-                        <div class="row mt-5 mb-3 mb-sm-1">
+                        <div class="row mt-5 mb-1 top-cards">
                             <div class="col-lg-3 col-sm-6">
                                 <a href="/">
                                     <div class="card mb-2 mb-lg-0">
@@ -270,7 +270,8 @@
                                 </a>
                             </div>
         
-                            <div class="col-lg-3 col-sm-6">
+                            <!-- json append 3 more cards -->
+                            <!-- <div class="col-lg-3 col-sm-6">
                                 <a href="/">
                                     <div class="card mb-2 mb-lg-0">
                                         <div class="card-body">
@@ -301,7 +302,7 @@
                                         </div>
                                     </div>
                                 </a>
-                            </div>
+                            </div> -->
                         </div>
                         <!-- cards row end -->
 
@@ -314,7 +315,7 @@
                                             <!-- chart left start -->
                                             <div class="col-xl-8 chart-left-border">
                                                 <div class="chart-left">
-                                                    <h2>Today's trends</h2>
+                                                    <h2></h2>
 
                                                     <div class="row mb-5">
                                                         <div class="col-md-7">
@@ -458,7 +459,8 @@
                                             <!-- chart right start -->
                                             <div class="col-xl-4 ps-xl-0">
                                                 <div class="row gx-0 chart-right h-100">
-                                                    <div class="col-xl-12 col-md-4 col-sm-6 stat">
+                                                    <!-- json append new data -->
+                                                    <!-- <div class="col-xl-12 col-md-4 col-sm-6 stat">
                                                         <span class="lead">Resolved</span>
                                                         <span class="h1 mb-0">449</span>
                                                     </div>
@@ -481,7 +483,7 @@
                                                     <div class="col-xl-12 col-md-6 stat">
                                                         <span class="lead">Resolution within SLA</span>
                                                         <span class="h1 mb-0">94%</span>
-                                                    </div>
+                                                    </div> -->
                                                 </div>
                                             </div>
                                             <!-- chart right end -->
@@ -510,7 +512,8 @@
                                         </div>
 
                                         <ul class="list-group">
-                                            <li class="list-group-item fs-5 fw-semibold">
+                                            <!-- json add elements / data -->
+                                            <!-- <li class="list-group-item fs-5 fw-semibold">
                                                 <p>Waiting on Feature Request</p>
                                                 <span class="gray-400">4238</span>
                                             </li>
@@ -525,7 +528,7 @@
                                             <li class="list-group-item fs-5 fw-semibold">
                                                 <p>Pending</p>
                                                 <span class="gray-400">281</span>
-                                            </li>
+                                            </li> -->
                                         </ul>
                                     </div>
                                 </div>
